@@ -539,5 +539,6 @@
     <string name="no_expression">No Expression!</string>
     <string name="regex_disclaimer">Muting to many expressions may affect startup and refresh times.</string>
     <string name="cleaning_cache">Cleaning cache...</string>
+    <string name="floating_compose">Floating Compose Button</string>
 
 </resources>
