@@ -98,6 +98,13 @@
             android:dependency="ui_extras"
             />
 
+        <CheckBoxPreference
+            android:key="floating_compose"
+            android:title="@string/floating_compose"
+            android:defaultValue="true"
+            android:dependency="ui_extras"
+            />
+
         </PreferenceCategory>
 
 </PreferenceScreen>
